--- a/.travis.yml.tmpl
+++ b/.travis.yml.tmpl
@@ -4,7 +4,15 @@ dist: trusty
 sudo: required
 
 go:
- - TRAVIS_GO_VERSION
+  - TRAVIS_GO_VERSION
+
+arch:
+  - amd64
+  - arm64
+
+jobs:
+  allow_failures:
+  - arch: arm64
 
 if: branch = master OR type = pull_request
 
@@ -17,6 +25,5 @@ before_install: ./.travis/prepare.sh
 
 before_script:
   - export PATH=/usr/local/clang/bin:$PATH
-  - export GO=/home/travis/.gimme/versions/goTRAVIS_GO_VERSION.linux.amd64/bin/go
 
 script: ./.travis/build.sh
